He seguido avanzando en todo, y ya he corregido todos los apuntes de la memoria

--- a/alto/alto.tex
+++ b/alto/alto.tex
@@ -70,9 +70,8 @@
 \pagenumbering{Roman}
 \maketitle % Crear el título
 \tableofcontents % Crear la tabla de contenidos
-
+\newpage
 \pagenumbering{arabic}
-
 \include{cap-introduccion}
 \include{cap-general}
 \include{cap-ksensor}
