--- a/memoria/cap-beneficios.tex
+++ b/memoria/cap-beneficios.tex
@@ -13,50 +13,49 @@ En esta sección se presentan los principales beneficios que aporta el proyecto, 
 La ejecución del proyecto planteado aporta una serie de beneficios técnicos en el campo del análisis de tráfico de red. A continuación, se describe individualmente cada uno de ellos.
 
 \subsection{Análisis del tráfico en redes de alta velocidad}
-Optimizando el proceso de captura de los paquetes, el sensor a nivel de kernel permitirá realizar el análisis del tráfico en redes de alta velocidad. Éste es el principal objetivo que se ha definido en el proyecto, así como el principal beneficio técnico que se espera obtener. 
+Optimizando el proceso de captura de los paquetes, la sonda a nivel de kernel permitirá realizar el análisis del tráfico en redes de alta velocidad. Éste es el principal objetivo que se ha definido en el proyecto, así como el principal beneficio técnico que se espera obtener. 
 El análisis del tráfico en redes de alta velocidad exige un coste computacional elevado, que no es posible obtener mediante las arquitecturas clásicas. Dicho problema se encuentra actualmente en fase de investigación y es objeto de estudio por la comunidad científica. 
 El proyecto que se plantea propone una solución software que, al funcionar desde el nivel de kernel, permitirá efectuar una captura eficiente de los paquetes, y al trabajar sobre plataformas multiprocesador, realizar el análisis concurrente de los mismos.
 
 \subsection{Integración de tipos de análisis}
-Ksensor ha sido diseñado de forma que pueda realizar cualquier tipo de análisis sobre el tráfico capturado. Cuando se captura un paquete de la red, la sonda lo procesa atendiendo a la lógica de procesamiento cargada en memoria por el parser. Dicho mapa de memoria se organiza en la forma de un árbol de nodos de decisión, que el motor de análisis del sensor recorre para determinar el tratamiento que se le ha de dar al paquete.
+Ksensor ha sido diseñado de forma que pueda realizar cualquier tipo de análisis sobre el tráfico capturado. Cuando se captura un paquete de la red, la sonda lo procesa atendiendo a la lógica de procesamiento cargada en memoria por el parser. Dicho mapa de memoria se organiza en la forma de un árbol de nodos de decisión, que el motor de análisis de la sonda recorre para determinar el tratamiento que se le ha de dar al paquete.
 
-El diseño de la lógica de nodos es genérico y multidisciplinar, por lo que permite efectuar cualquier tipo de tratamiento sobre el tráfico capturado. Así pues, el sensor es válido en diferentes ámbitos de la telemática como la detección de intrusión, la monitorización inteligente de red o la medida de parámetros de calidad de servicio.
+El diseño de la lógica de nodos es genérico y multidisciplinar, por lo que permite efectuar cualquier tipo de tratamiento sobre el tráfico capturado. Así pues, la sonda es válida en diferentes ámbitos de la telemática como la detección de intrusión, la monitorización inteligente de red o la medida de parámetros de calidad de servicio.
 
-\subsection{Arquitectura de pruebas}
-Con el fin de poder realizar pruebas de rendimiento en el sensor de forma automatizada, en este proyecto se ha ampliado la arquitectura de pruebas desarrollada en \cite{KABO05}. Esta arquitectura permite comprobar el comportamiento de Ksensor cuando se le somete a un patrón de tráfico determinado. Para ello se utilizan plantillas de pruebas o tests, que el sistema ejecuta de forma automatizada y sucesiva, configurando la sonda y los inyectores según se especifique en la plantilla.
+\subsection{Ampliación de la arquitectura de pruebas}
+Con el fin de poder realizar pruebas de rendimiento en la sonda de forma automatizada, en este proyecto se ha ampliado la arquitectura de pruebas desarrollada en \cite{KABO05}. Esta arquitectura permite comprobar el comportamiento de Ksensor cuando se le somete a un patrón de tráfico determinado. Para ello se utilizan plantillas de pruebas o tests, que el sistema ejecuta de forma automatizada y sucesiva, configurando la sonda y los inyectores según se especifique en la plantilla.
 
-En la arquitectura actual, se dispone de inyectores hardware, llamados DAG\cite{DAPR10}, que son capaces de inyectar a una tasa capaz de saturar el enlace, permitiendo probar el sistema bajo condiciones de estrés, que se dan en redes de alta velocidad. Asimismo, la arquitectura recoge diversas estadísticas de las pruebas realizadas, de cada uno de los componentes que participan en las mismas: switch, interfaces de red, inyectores, sonda, etc.
+En la arquitectura actual, se dispone de inyectores hardware, llamados DAG\cite{DAPR10}, que son capaces de inyectar a una tasa capaz de saturar el enlace, permitiendo probar el sistema bajo condiciones de estrés, que se dan en redes de alta velocidad. Asimismo, la arquitectura recoge diversas estadísticas de cada uno de los componentes que participan en las mismas: switch, interfaces de red, inyectores, sonda, etc. de las pruebas realizadas.
 
 \section{Beneficios económicos}
 La utilización del sistema diseñado como herramienta de análisis de tráfico introduce un conjunto de beneficios económicos en relación con las aportaciones técnicas que se han expuesto anteriormente.
 
-\subsection{Análisis del tráfico en redes de alta velocidad}
+\subsection{Utilización en análisis del tráfico en redes de alta velocidad}
 En la actualidad no existen apenas herramientas en el mercado capaces de realizar el análisis del tráfico en redes de alta velocidad. Ksensor ha sido específicamente diseñado para satisfacer las necesidades de captura y procesamiento típicas en estas redes. Así, un producto derivado del prototipo de Ksensor podría ser utilizado en los segmentos de alta velocidad de los Proveedores de Servicios de Internet (ISP), en los cuales podría resultar útil la medida de parámetros de QoS o la monitorización del tráfico cursante. Podría ser utilizado, también, como herramienta de análisis en las redes de área local de las empresas.
 
 \subsubsection{Localización de fallos de red}
 El buen funcionamiento de las redes corporativas es indispensable en el ejercicio empresarial. Esto es especialmente cierto en la actualidad, en que la mayor parte de las transacciones se realizan de forma telemática. Si por algún motivo la red completa cae puede significar un parón en el proceso productivo. La indisponibilidad del servicio impide que los clientes puedan contactar con la empresa o que se confirmen los pedidos. En cualquier caso, afectará negativamente a la producción y, en periodos de indisponibilidad largos, degradará su imagen.
 
-Haciendo uso de la sonda se podría reducir el tiempo entre que ocurre el fallo y se arregla. La sonda analizaría todo el tráfico que circula por la red y podría programarse por ejemplo para monitorizar las conexiones con el servidor web. Si éste fallara, la sonda lo detectaría y podría generar una alarma para indicarlo. De este modo, el administrador de la red podría utilizar la sonda como herramienta de diagnóstico para localizar el origen del problema.
+Haciendo uso de la sonda se podría reducir el tiempo entre que ocurre el fallo y se arregla. La sonda analizaría todo el tráfico que circula por la red y podría programarse, por ejemplo, para monitorizar las conexiones con el servidor web. Si éste fallara, la sonda lo detectaría y podría generar una alarma para indicarlo. De este modo, el administrador de la red podría utilizar la sonda como herramienta de diagnóstico para localizar el origen del problema.
 
-En un caso de uso más avanzado, se podría incluso llegar a detectar los fallos, sin llegar a caer el servicio. Por ejemplo, se podría programar la sonda para que analizara las retransmisiones, el retardo y parámetros de rutado de paquetes, resultando en que en caso de detectarse un número de paquetes con el TTL a punto de expirar, demasiadas retransmisiones o cualquier otro síntoma de inestabilidad en la red, avisara al administrador, o incluso, activara directivas de balanceo de tráfico.
+En un caso de uso más avanzado, se podría incluso llegar a detectar los fallos, sin llegar a caer el servicio. Por ejemplo, se podría programar la sonda para que analizara las retransmisiones, el retardo y los parámetros de rutado de paquetes, resultando que en caso de detectarse un número de paquetes con el TTL a punto de expirar, demasiadas retransmisiones o cualquier otro síntoma de inestabilidad en la red, avise al administrador, o incluso, active directivas de balanceo de tráfico en los dispositivos pertinentes.
 
 \subsubsection{Detección de ataques en la red}
-La seguridad es uno de los factores clave en el diseño de las redes corporativas. De no preservarse la integridad de las comunicaciones, personas ajenas a la empresa podrían obtener información privada o amenazar de algún modo su funcionamiento normal. Si bien ya existen dispositivos específicos con este fin, como los firewall, debe tenerse en cuenta que gran parte de los ataques proceden del interior de la empresa, y que por tanto pueden burlar sin problemas las medidas de seguridad perimetral. La sonda, mediante el análisis del tráfico de la red, podría realizar la labor de un sistema de detección de intrusión, buscando patrones de tráfico que considera sospechosos, independientemente de su procedencia, y por tanto útil también en estos casos.
+La seguridad es uno de los factores clave en el diseño de las redes corporativas. De no preservarse la integridad de las comunicaciones, personas ajenas a la empresa podrían obtener información privada o amenazar de algún modo su funcionamiento normal. Si bien ya existen dispositivos específicos con este fin, como los firewall, debe tenerse en cuenta que gran parte de los ataques proceden del interior de la empresa, y que por tanto pueden burlar sin problemas las medidas de seguridad perimetral.
+
+La sonda, mediante el análisis del tráfico de la red, podría realizar la labor de un sistema de detección de intrusión, buscando patrones de tráfico que considera sospechosos, independientemente de su procedencia, y por tanto siendo útil también en estos casos.
 
 \subsubsection{Reducción de los dispositivos necesarios}
-El diseño de Ksensor permite integrar en un único dispositivo diferentes tipos de análisis, que de lo contrario únicamente podrían realizarse utilizando un conjunto de
-sistemas específicos. Así, la sonda puede obtener diversos parámetros de la red, monitorizar las conexiones o incluso buscar patrones de tráfico al igual que en los sistemas de detección de intrusión.
-
+El diseño de Ksensor permite integrar en un único dispositivo diferentes tipos de análisis, que de lo contrario únicamente podrían realizarse utilizando un conjunto de sistemas específicos. Así, la sonda puede obtener diversos parámetros de la red, monitorizar las conexiones e incluso buscar patrones de tráfico al igual que en los sistemas de detección de intrusión.
 
 \section{Beneficios sociales}
-
 Los beneficios sociales que aporta la sonda se derivan principalmente de la utilización de la arquitectura automatizada de pruebas, expuesta anteriormente en el apartado de beneficios técnicos.
 
 \subsection{Búsqueda de parámetros óptimos en la sonda}
-La arquitectura de pruebas puede utilizarse para comprobar el funcionamiento de la sonda con diferentes parámetros de configuración, sometido a diversas cargas de red que también es posible especificar. De este modo, se pueden obtener de forma empírica los parámetros óptimos configurables en el sensor, como puede ser, por ejemplo, el tamaño de la cola en la que se almacenan los paquetes capturados, el número óptimo de tarjetas de red, o la frecuencia de captura de paquetes.
+La arquitectura de pruebas puede utilizarse para comprobar el funcionamiento de la sonda con diferentes parámetros de configuración y sometido a diversas cargas de red, que también es posible especificar. De este modo, se pueden obtener de forma empírica los parámetros óptimos configurables en la sonda, como puede ser, por ejemplo, el tamaño de la cola en la que se almacenan los paquetes capturados, el número óptimo de tarjetas de red, o la frecuencia de captura de paquetes.
 
 \subsection{Comparativa de rendimientos entre sondas}
-La arquitectura de pruebas se puede utilizar para realizar una comparativa de rendimiento entre las sondas a nivel de kernel ksensor y su nueva implementación actualizada, con la finalidad de apreciar el comportamiento que éstos presentan cuando se los somete a un patrón de tráfico determinado. Tal y como la ejecución de dichas pruebas permitió, asimismo, justificar la realización de este proyecto de continuación, al haberse obtenido resultados favorables en el rendimiento de Ksensor.
+La arquitectura de pruebas se puede utilizar para realizar una comparativa de rendimiento entre las sondas a nivel de kernel Ksensor y su nueva implementación actualizada, con la finalidad de apreciar el comportamiento que éstos presentan cuando se los somete a un patrón de tráfico determinado. Tal y como la ejecución de dichas pruebas permitió, asimismo, justificar la realización de este proyecto de continuación, al haberse obtenido resultados favorables en el rendimiento de Ksensor.
 
 \subsection{Reducción del tiempo invertido en pruebas}
-Las pruebas se realizan de forma automatizada, con lo cual únicamente es necesario definir una batería de pruebas y el sistema las ejecutará sucesivamente en el orden que se hayan especificado. En consecuencia, el tiempo que una persona ha de invertir en realizar las pruebas se reduce notablemente y por lo tanto reduce los costes del proyecto.
+Las pruebas se realizan de forma automatizada, con lo cual únicamente es necesario definir una batería de pruebas y el sistema las ejecutará sucesivamente en el orden que se hayan especificado. En consecuencia, el tiempo a invertir en la realización de las pruebas se reduce notablemente y por lo tanto reduce los costes del proyecto.
