--- a/memoria/cap-riesgos.tex
+++ b/memoria/cap-riesgos.tex
@@ -7,6 +7,6 @@ El kernel de Linux está pensado para ser de propósito general, y como tal, las r
 
 Por ello, es importante considerar que aunque el desarrollo de kernel haya avanzado tanto en estos últimos años, es posible que los avances puedan suponer algún tipo de impedimento respecto al anterior kernel, aún cuando se hayan observado mejoras generales en el funcionamiento de la nueva versión.
 
-Debe tenerse en cuenta, que tanto como la estructura del kernel se ha vuelto más compleja, también puede estar convergiendo hacia una mejor respuesta hacia el usuario. De todos modos, este tipo de cambios aunque no son frecuentes, es un potencial riesgo del proyecto.
+Debe tenerse en cuenta, que tanto como la estructura del kernel se ha vuelto más compleja, también puede estar convergiendo hacia una mejor respuesta hacia el usuario. De todos modos, este tipo de cambios aunque no son frecuentes, es un riesgo potencial del proyecto.
 
-Otro de los riesgos de este proyecto es la posibilidad de que el servidor se sature y evite que el administrador se pueda poner en contacto con él. Por lo tanto, aunque no se puede evitar que haya momentos en los que el equipo no responda, sí que se evitara en la medida de lo posible.
+Otro de los riesgos de este proyecto es la posibilidad de que el servidor se sature y evite que el administrador se pueda poner en contacto con él. Por lo tanto, aunque no se puede asegurar que no haya momentos en los que el equipo no responda, sí que se evitara en la medida de lo posible a través de la reducción de zonas críticas, y la reducción de la extensión de las existentes.
