--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -69,7 +69,7 @@
 \pagenumbering{Roman}
 \maketitle % Crear el título
 \tableofcontents % Crear la tabla de contenidos
-
+\newpage
 \pagenumbering{arabic}
 \include{cap-introduccion}
 \include{cap-objetivos}
