--- a/memoria/cap-gestion.tex
+++ b/memoria/cap-gestion.tex
@@ -2,16 +2,16 @@
 % !TeX root = main.tex
 
 \chapter{Gestión}
-En este capítulo se resumen las tareas de gestión que se deben desempeñar en la realización del presente proyecto. Se expondrá el resumen del plan de trabajo que se debe seguir y el resumen del presupuesto. En primer lugar, se presentará el grupo humano de trabajo que participará en la realización de los mismos, el cual es común en ambos casos.
+En este capítulo se resumen las tareas de gestión que se deben desempeñar en la realización del presente proyecto. Se expondrá el plan de tareas que se debe cumplir y el resumen del presupuesto. En primer lugar, se presentará el grupo humano de trabajo que participará en la realización de los diferentes componentes del proyecto.
 
 \section{Equipo de trabajo}
-Para el desarrollo del presente proyecto y el del proyecto de continuación se debe contar con el siguiente equipo de trabajo:
+Para el desarrollo del presente proyecto se debe contar con el siguiente equipo de trabajo:
 \begin{center}
 \rowcolors{1}{gray}{white}
 \begin{tabular}{|c|c|p{5cm}|}
 \hline CÓDIGO & RESPONSABILIDAD & DESCRIPCIÓN \\ 
 \hiderowcolors
-\hline H1 & Director de proyecto & Será el encargado de supervisar los diseños y de que se cumpla con el plan de trabajo. \\ 
+\hline H1 & Director de proyecto & Será el encargado de supervisar los diseños y de que se cumpla con el plan de tareas. \\ 
 \hline H2 & Diseñador & Será el encargado de realizar el diseño de los módulos del proyecto y los planes de pruebas de rendimiento. \\ 
 \hline H3 & Programador & Se encargará de implementar los módulos diseñados, y de llevar a cabo las pruebas de validación y de rendimiento previstas. \\ 
 \hline H4 & Administrativo & Se encargará de la documentación del proyecto, y de resolver las cuestiones burocráticas y administrativas.\\ 
@@ -20,9 +20,9 @@ Para el desarrollo del presente proyecto y el del proyecto de continuación se de
 \end{center}
 
 \section{Resumen del proyecto}
-En esta sección se presenta el resumen del Plan de Trabajo y Presupuesto para la elaboración del proyecto Diseño e implementación de un sensor a nivel de kernel para el análisis de tráfico en redes de alta velocidad.
+En esta sección se presenta el resumen del plan de trabajo y presupuesto para la elaboración del presente proyecto.
 
-\subsection{Plan de trabajo}
+\subsection{Plan de tareas}
 En este apartado se definen los paquetes de trabajo que se van a seguir en la realización del proyecto. Cada paquete de trabajo se desglosa en las tareas que se han de realizar para su consecución. Se indicarán, asimismo, las unidades de entrega correspondientes a cada paquete de trabajo o tarea.
 
 \begin{description}
